# image-classification

./: .gitignore  .pre-commit-config.yaml  INFO.md  Makefile  README.md  config.yaml  pyproject.toml  vanilla_CNN.ipynb
configs/: train.yaml
configs/callbacks/: best_examples.yaml  confusion_matrix.yaml  default.yaml  early_stopping.yaml  example_predictions.yaml  model_checkpoint.yaml  random_examples.yaml  worst_examples.yaml
configs/datamodule/: celeb_a.yaml  cifar10.yaml  cifar100.yaml  emnist.yaml  fashion_mnist.yaml  mnist.yaml  svhn.yaml
configs/debug/: default.yaml
configs/experiment/: celeb_a.yaml  cifar10.yaml  cifar100.yaml  emnist.yaml  fashion_mnist.yaml  mnist.yaml  svhn.yaml  test.yaml
configs/feature_extractor/: deep_cnn.yaml  inception_v4.yaml  mlp.yaml  mobilenet.yaml  mobilenet_v2.yaml  resnet.yaml  squeeze_net.yaml  vgg.yaml
configs/head/: classification_head.yaml  default.yaml  multiclass_convolutional.yaml  multiclass_linear.yaml  multilabel_convolutional.yaml  multilabel_linear.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: default.yaml  image_classifier.yaml  multiclass_image_classifier.yaml  multilabel_image_classifier.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
configs/transforms/: default.yaml  flatten.yaml  grey_normalize.yaml  horizontal_flip.yaml  permute.yaml  random_horizontal_flip.yaml  random_rotation.yaml  rgb_normalize.yaml  (+2 more)
notebooks/: data.ipynb  model.ipynb  vanilla_CNN.ipynb
src/: architectures.py  data.py  evaluation.py  model.py  train.py  transforms.py
(+113 files in other folders)
