[tool.poetry]
name = "image-classification"
version = "0.1.0"
description = ""
authors = ["shate <tomashawro.kontakt@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pytorch-lightning = "^2.0.0"
torchvision = "^0.15.1"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
plotly = "^5.14.0"
rich = "^13.3.3"
wandb = "^0.14.0"
pytest = "^7.2.2"
torchtyping = "^0.1.4"
pre-commit = "^3.2.2"
black = "^23.3.0"
blacken-docs = "^1.13.0"
isort = "^5.12.0"
ipykernel = "^6.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
